# zedc

./: .gitignore  CMakeLists.txt  README.md
include/: opcodes.hpp  vm.hpp
src/: main.cpp  natives.cpp  vm.cpp
